# infosnap

./: Cargo.toml  README.md  config.toml
src/: ascii.rs  config_fetch.rs  data.rs  image.rs  main.rs  system_info.rs
