[package]
name = "infosnap"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
sysinfo = "0.30.12"
sys-info = "0.9.1"
viuer = "0.7.1"
os_info = "3.8.2"
local-ip-address = "0.6.1"
public-ip-address = "0.3.2"
toml = "0.8.14"
serde = "1.0.203"
serde_derive = "1.0.203"
crossterm = "0.27.0"
log = "0.4.21"